--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -11,4 +11,16 @@
  <!-- plausible -->
  <script async defer data-domain="chs.us" src="https://plausible.io/js/plausible.js"></script>
  <!-- end plausible -->
+ 
+ <!-- Google -->
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-92888611-1', 'auto');
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<!-- Google -->
 </header>
