--- a/themes/mainroad/layouts/_default/baseof.html
+++ b/themes/mainroad/layouts/_default/baseof.html
@@ -62,6 +62,6 @@
 <script src="{{ . | relURL }}"></script>
 {{- end }}
 {{- partial "mathjax.html" . -}}
-<a href="https://chs.us/lion.php">
+<a href="https://chs.us/lion.php"></a>
 </body>
 </html>
