--- a/themes/mainroad/layouts/partials/menu.html
+++ b/themes/mainroad/layouts/partials/menu.html
@@ -1,7 +1,7 @@
 {{- if .Site.Menus.main }}
 <nav class="menu">
 	<button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
-		<span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
+		<span class="menu__btn-title">{{ T "menu_label" }}</span>
 	</button>
 	<ul class="menu__list">
 		{{- $currentNode := . }}
