--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,14 +2,14 @@
 <main>
     <article>
         <header>
-            <h1>{{.Title}}</h1>
+          <h1>{{.Title}}</h1>
         </header>
         <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
         {{.Content}}
     </article>
     <!-- Ranges through content/posts/*.md -->
-    {{ range .Pages }}
-    <a href="{{.Permalink}}">{{.Title}}</a><br/><br/>
+    {{ range .Pages.ByPublishDate.Reverse }}
+    <a href="{{.Permalink}}"><time>{{ .Date.Format "Jan 2, 2006" }}</time> -- {{.Title}}</a><br/><br/>
     {{ end }}
 </main>
 {{ end }}
