--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -11,7 +11,7 @@
  <!-- plausible -->
  <script async defer data-domain="chs.us" src="https://plausible.io/js/plausible.js"></script>
  <!-- end plausible -->
- 
+
  <!-- Google -->
  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92888611-1"></script>
@@ -23,4 +23,8 @@
   gtag('config', 'UA-92888611-1');
 </script>
 <!-- Google -->
+<!-- Goatcounter -->
+<script data-goatcounter="https://chs.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+<!-- goatcounter -->
 </header>
