--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -4,11 +4,13 @@
 		{{ partial "menu.html" . }}
 	</div>
 <!-- clicky -->
- <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(100632801);</script>
- <script async src="//static.getclicky.com/js"></script>
- <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100632801ns.gif" /></p></noscript>
+<!-- <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(100632801);</script> -->
+<!-- <script async src="//static.getclicky.com/js"></script> -->
+<!-- <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100632801ns.gif" /></p></noscript> -->
  <!-- end clicky -->
+
  <!-- plausible -->
+ <script defer data-domain="chs.us" src="https://plausible.io/js/script.js"></script>
  <!-- end plausible -->
 
  <!-- Google -->
@@ -24,6 +26,6 @@
 <!-- Google -->
 <!-- Goatcounter -->
 <script data-goatcounter="https://chs.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+	async src="//gc.zgo.at/count.js"></script>
 <!-- goatcounter -->
 </header>
