--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -25,7 +25,7 @@
 </script>
 <!-- Google -->
 <!-- Goatcounter -->
-<script data-goatcounter="https://chs.goatcounter.com/count"
-	async src="//gc.zgo.at/count.js"></script>
+<!-- <script data-goatcounter="https://chs.goatcounter.com/count" -->
+<!-- 	async src="//gc.zgo.at/count.js"></script> -->
 <!-- goatcounter -->
 </header>
