--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -47,4 +47,10 @@
 <noscript><p><img src="//a.chs.us/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Matomo Code -->
 
+<!-- Matomo Image Tracker-->
+<noscript>
+<img referrerpolicy="no-referrer-when-downgrade" src="https://a.chs.us/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
+</noscript>
+<!-- End Matomo -->
+
 </header>
