--- a/themes/mainroad/layouts/partials/header.html
+++ b/themes/mainroad/layouts/partials/header.html
@@ -24,33 +24,10 @@
   gtag('config', 'UA-92888611-1');
 </script>
 <!-- Google -->
+
 <!-- Goatcounter -->
-<!-- <script data-goatcounter="https://chs.goatcounter.com/count" -->
-<!-- 	async src="//gc.zgo.at/count.js"></script> -->
+<script data-goatcounter="https://chs.goatcounter.com/count"
+ 	async src="//gc.zgo.at/count.js"></script>
 <!-- goatcounter -->
-
-<!-- Matomo -->
-<script>
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//a.chs.us/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '1']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<noscript><p><img src="//a.chs.us/matomo.php?idsite=1&amp;rec=1" style="border:0;" alt="" /></p></noscript>
-<!-- End Matomo Code -->
-
-<!-- Matomo Image Tracker-->
-<noscript>
-<img referrerpolicy="no-referrer-when-downgrade" src="https://a.chs.us/matomo.php?idsite=1&amp;rec=1" style="border:0" alt="" />
-</noscript>
-<!-- End Matomo -->
 
 </header>
