--- a/themes/mainroad/layouts/partials/footer.html
+++ b/themes/mainroad/layouts/partials/footer.html
@@ -7,3 +7,19 @@
 		</div>
 	</div>
 </footer>
+<!-- Default Statcounter code for Chs.us https://chs.us -->
+<script type="text/javascript">
+var sc_project=11581592;
+var sc_invisible=1;
+var sc_security="25a6d6f4";
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/11581592/0/25a6d6f4/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
